--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,13 @@ bin-release/
 *.air
 *.ipa
 *.apk
+*.ai
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+#Excluded files
+*.png
+*.jpg
+*.jpeg
